Styling for date on grid, add logic to find if grid is today

--- a/src/components/HabitGrid/HabitGrid.css
+++ b/src/components/HabitGrid/HabitGrid.css
@@ -23,4 +23,17 @@
   border-radius: 2px;
   background: #E5FFDE;
   margin: 3px;
+  position: relative;
+}
+
+.grid-date {
+  font-size: 11px;
+  position: absolute;
+  bottom: 0;
+  left: 3px;
+}
+
+.grid-x {
+  margin-left: 15px;
+  font-size: 28px;
 }
