--- a/src/components/HabitTitle/HabitTitle.css
+++ b/src/components/HabitTitle/HabitTitle.css
@@ -1,3 +1,10 @@
 .title-container {
   text-align: center;
 }
+
+.title-container h1 {
+  font-size: 36px;
+  margin-bottom: 15px;
+  padding: 0;
+  font-weight: 700;
+}
