--- a/src/components/HabitBuilder/HabitBuilder.css
+++ b/src/components/HabitBuilder/HabitBuilder.css
@@ -3,7 +3,7 @@
   width: 100%;
 }
 
-.form-label {
+.form-label, .form-title {
   font-weight: 700;
   font-size: 18px;
   margin: 10px 0;
@@ -17,6 +17,43 @@
   border: 1px solid #fff;
 }
 
+.form-radio {
+  display: block;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.form-label-radio {
+  display: inline-block;
+  width: 100%;
+  min-height: 20px;
+  padding-left: 20px;
+  margin-bottom: 0;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.form-radio input[type="radio"] {
+  position: absolute;
+  margin-left: -20px;
+}
+
 .pull-right {
   float: right;
+}
+
+.button {
+  font-size: 20px;
+  padding: 10px 15px;
+  cursor: pointer;
+  background: #32A287;
+  color: #fff;
+  border-radius: 3px;
+  border: 0px solid #fff;
+}
+
+.button:hover {
+  transition: all 300ms;
+  background: #2A8973;
 }
