--- a/src/components/HabitNotes/HabitNotes.css
+++ b/src/components/HabitNotes/HabitNotes.css
@@ -3,5 +3,19 @@
 }
 
 .note {
-  margin: 10px 0;
+  margin: 0px 0 10px 0px;
+  padding-left: 15px;
+  position: relative;
+}
+
+.delete-trigger {
+  position: absolute;
+  padding: 0px 5px;
+  left: -7px;
+  top: 2px;
+  color: #EF5B5B;
+  background: #074444;
+  border-radius: 3px;
+  cursor: pointer;
+  line-height: 1.2;
 }
