--- a/src/components/HabitBuilder/HabitBuilder.css
+++ b/src/components/HabitBuilder/HabitBuilder.css
@@ -3,7 +3,8 @@
   width: 100%;
 }
 
-.form-label, .form-title {
+.form-label,
+.form-title {
   font-weight: 700;
   font-size: 18px;
   margin: 10px 0;
@@ -13,12 +14,12 @@
   font-size: 18px;
   margin: 10px 0 20px 0;
   border-radius: 3px;
-  box-shadow: inset 0 1px 1px rgba(100,100,100,.075);
+  box-shadow: inset 0 1px 1px rgba(100, 100, 100, .075);
   border: 1px solid #fff;
 }
 
 .form-input.has-error {
-  border: 1px solid #F79D65;
+  border: 1px solid #f79d65;
 }
 
 .form-input-with-button {
@@ -61,7 +62,7 @@
   font-size: 20px;
   padding: 10px 15px;
   cursor: pointer;
-  background: #32A287;
+  background: #32a287;
   color: #fff;
   border-radius: 3px;
   border: 0px solid #fff;
@@ -75,7 +76,7 @@
 
 .button:hover {
   transition: all 300ms;
-  background: #2A8973;
+  background: #2a8973;
 }
 
 .delete-grid-container {
