--- a/src/components/HabitNotes/HabitNotes.css
+++ b/src/components/HabitNotes/HabitNotes.css
@@ -13,7 +13,7 @@
   padding: 0px 5px;
   left: -7px;
   top: 0px;
-  color: #EF5B5B;
+  color: #ef5b5b;
   background: #074444;
   border-radius: 3px;
   cursor: pointer;
