--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background: #0f7173;
+  color: #fff;
 }
 
 * {
   box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
