--- a/src/components/XEffectContainer.css
+++ b/src/components/XEffectContainer.css
@@ -59,6 +59,10 @@
   float: right;
 }
 
+.margin-right {
+  margin-right: 8px;
+}
+
 .button {
   font-size: 20px;
   padding: 10px 15px;
@@ -84,6 +88,7 @@
   text-align: center;
   margin: 0 auto;
   font-size: 12px;
+  clear: both;
 }
 
 .delete-grid-icon {
