--- a/src/components/XEffectContainer.css
+++ b/src/components/XEffectContainer.css
@@ -1,6 +1,12 @@
 .container {
   margin: 30px auto;
-  width: 450px;
+  max-width: 450px;
+}
+
+@media screen and (max-width: 450px) {
+  .container {
+    padding: 0 20px;
+  }
 }
 
 .block-form-el {
