--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@ body {
   padding: 0;
   background: #0f7173;
   color: #fff;
+  font-size: 100%;
+  font-family: "Nunito", sans-serif;
 }
 
 * {
   box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
 }
